# Plural_Calculator

./: .gitignore  CHANGELOG.md  CMakeLists.txt  README.md  create_installer.bat  icon_config.rc  res_config.qrc
includes/: calculate.h  complex.h  mainwindow.h
installer/config/: config.xml
resources/: calculator.qss  chart.qss  global.qss  mainwindow.ui
srcs/: calculate.cpp  complex.cpp  main.cpp  mainwindow.cpp
